--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
         <button type="button" class="signup-btn">Sign Up</button>
       </div>
       <div class="loginbox">
-        asas
-      </div>
+        <h3>LOGIN</h3>
+        <input type="text" placeholder="USERNAME" name="uname" required>
+        <input type="password" placeholder="PASSWORD" name="psw" required>
+        <h4><input type="checkbox" checked="checked" name="remember">Remember me</h4>
+        <button type="button" class="login-btn">Log In</button>
+        FORGOT PASSWORD? RECOVERY HERE
+        OR
+        DON'T HAVE AN ACCOUNT? SIGN UP
 
     </body>
 </html>
