--- a/home.html
+++ b/home.html
@@ -45,7 +45,10 @@
         <img class="vending-machine" src="images/vending-machine.png">
         <h2>Find your favorite food from vending machine near you. Order now! </h2>
         <div class="findbox">
-            
+            <input type="text" placeholder="Enter your location here" name="location" required>
+            <i class="fas fa-location-arrow"></i>
+            <button type="button" class="find-btn">Find</button>
+            <p>or Find by product name</p>
         </div>
       </div>
     </body>
