--- a/find.html
+++ b/find.html
@@ -19,5 +19,11 @@
             <i class="fas fa-location-arrow"></i>
             <i class="fas fa-times"></i>
         </div>
+
+        /*item in machine box*/
+        <div class="popup">
+            <p>products</p>
+            <button type="button" class="select-btn" >SELECT</button>
+        </div>
     </body>
 </html>
