--- a/find.html
+++ b/find.html
@@ -19,10 +19,15 @@
             <i class="fas fa-location-arrow"></i>
             <i class="fas fa-times"></i>
         </div>
+        <div class="map">
+            /*ยัดแผนที่ตรงนี้จ้า*/
+        </div>
 
         /*item in machine box*/
         <div class="popup">
+            /*ใส่ชื่อเครื่องตรงนี้จ้า*/
             <p>products</p>
+            /*คิวรี่โปรดักของเครื่องมาตรงนี้จ้า*/
             <button type="button" class="select-btn" >SELECT</button>
         </div>
     </body>
