--- a/order.html
+++ b/order.html
@@ -21,8 +21,16 @@
             /*คิวรี่ชื่อเครื่องตรงนี้จ้า*/
         </div>
         <p>Product</p>
+        <!--เริ่มลูปphpตรงนี้-->
         <div class="products">
-            /*คิวรี่products (ยังทำไม่ได้)*/
+            <div class="image">
+                /*รูป*/
+            </div>
+            <div class="price">
+                /*ราคา*/ <br>
+                <i class="fas fa-minus-circle"></i>/*เลข*/<i class="fas fa-plus-circle"></i>
+            </div>
         </div>
+        <button type="button" class="find-btn">VIEW CART</button>
     </body>
 </html>
