--- a/order.html
+++ b/order.html
@@ -27,10 +27,11 @@
                 /*รูป*/
             </div>
             <div class="price">
-                /*ราคา*/ <br>
-                <i class="fas fa-minus-circle"></i>/*เลข*/<i class="fas fa-plus-circle"></i>
+                /*ชื่อ+ราคา*/ <br>
+                <i class="fas fa-minus-circle"></i>/*เลขจำนวน*/<i class="fas fa-plus-circle"></i>
             </div>
         </div>
+        <!--จบลูป-->
         <button type="button" class="find-btn">VIEW CART</button>
     </body>
 </html>
