--- a/payment.html
+++ b/payment.html
@@ -1,4 +1,4 @@
-!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
     <head>
         <meta charset="UTF-8" />
@@ -18,18 +18,54 @@
             <i class="fas fa-times"></i>
         </div>
         <div class="machine">
-            <div class="order">
-                <h2>1</h2><span>Machine Details</span>
+            <div class="cont1">
+                <div class="order">
+                    <h3>1</h3>
+                </div>
+                <div class="detail">
+                    <h4>Machine Details</h4>
+                </div>
             </div>
-            /*คิวรี่machine*/
+            <div class="machine-details">
+                    /*คิวรี่machine*/
+            </div>
         </div>
         <div class="payment">
-            <div class="order">
-                <h2>2</h2><span>Payment</span>
+            <div class="cont2">
+                <div class="cont1">
+                    <div class="order">
+                        <h3>2</h3>
+                    </div>
+                    <div class="detail">
+                        <h4>Payment</h4>
+                    </div>
+                </div>
+                <div class="cont1">
+                    <div class="pickup">
+                        <i class="far fa-money-bill-alt fa-3x"></i>
+                        <br>
+                        <p>Pay on pick up</p>
+                    </div>
+                    <div class="creditcard">
+                        <i class="far fa-credit-card fa-3x"></i>
+                        <br>
+                        <p>Credit/Debit</p>
+                    </div>
+                </div>
+                <p>use pick ma point</p>
+                <button type="button" class="pay-btn">CONFIRM PAYMENT</button>
             </div>
         </div>
-        <div class="order-detail">
-            /*คิวรี่order*/
-        </div>
+        <h2>Your Order</h2>
+        <!--เริ่มลูปphpตรงนี้-->
+        <div class="products">
+                <div class="image">
+                    /*รูป*/
+                </div>
+                <div class="price">
+                    /*ชื่อ+ราคา+จำนวน*/
+                </div>
+            </div>
+        <!--จบลูป-->
     </body>
 </html>
