--- a/find.html
+++ b/find.html
@@ -23,7 +23,7 @@
             /*ยัดแผนที่ตรงนี้จ้า*/
         </div>
 
-        /*item in machine box*/
+        <!--item in machine box-->
         <div class="popup">
             /*ใส่ชื่อเครื่องตรงนี้จ้า*/
             <p>products</p>
