--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,6 @@
             </div>
         </div>
         <!--จบลูป-->
-        <button type="button" class="find-btn">VIEW CART</button>
+        <button type="button" class="find-btn">CHECKOUT</button>
     </body>
 </html>
