--- a/stafffind.html
+++ b/stafffind.html
@@ -19,6 +19,7 @@
             <i class="fas fa-location-arrow"></i>
             <i class="fas fa-times"></i>
         </div>
+        <div class="body-container">
         <div class="map">
             /*ยัดแผนที่ตรงนี้จ้า*/
         </div>
@@ -30,6 +31,7 @@
             /*คิวรี่โปรดักของเครื่องมาตรงนี้จ้า*/
             <button type="button" class="edit-btn" >EDIT</button>
             <button type="button" class="delete-btn" >DELETE</button>
+        </div>
         </div>
     </body>
 </html>
