--- a/products.html
+++ b/products.html
@@ -19,8 +19,9 @@
         </div>
         <div class="body-container">
             <input type="text" placeholder="search product" name="product">
-            <!--ลูปคิวรี่ตรงนี้-->
+            
             <div class="cont2">
+                <!--ลูปคิวรี่ตรงนี้-->
                 <div class="cont1">
                     <div class="image">
                         /*รูป*/
@@ -33,8 +34,11 @@
                         <i class="fas fa-pen"></i>
                     </div>
                 </div>
+                <!--จบลูป-->
             </div>
-            <!--จบลูป-->
+            <div class="add">
+                    <i class="fas fa-plus-circle fa-2x"></i>
+            </div>
         </div>
 
     </body>
