--- a/products.html
+++ b/products.html
@@ -14,12 +14,10 @@
     </head>
     <body>
         <div class="header">
-            <h2>Products</h2>
+            <h2>search by product</h2>
             <i class="fas fa-times"></i>
         </div>
         <div class="body-container">
-            <input type="text" placeholder="search product" name="product">
-            
             <div class="cont2">
                 <!--ลูปคิวรี่ตรงนี้-->
                 <div class="cont1">
@@ -30,14 +28,10 @@
                         /*ชื่อ+ราคา*/
                     </div>
                     <div class="tools">
-                        <i class="far fa-trash-alt"></i>
-                        <i class="fas fa-pen"></i>
+                        <i class="fas fa-search-location"></i>
                     </div>
                 </div>
                 <!--จบลูป-->
-            </div>
-            <div class="add">
-                    <i class="fas fa-plus-circle fa-2x"></i>
             </div>
         </div>
 
