--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
         <div class="loginbox2" id="loginbox2">
         <h3>LOGIN</h3>
         <i class="fas fa-times" onclick="closeLogin()"></i>
+        <form action="login.php" method="post">
         <input type="text" placeholder="USERNAME" name="uname" required>
         <input type="password" placeholder="PASSWORD" name="psw" required>
         <p><input type="checkbox" checked="checked" name="remember">Remember me</p>
-        <button type="button" class="login-btn">Log In</button>
+        <button type="submit" class="login-btn" name="login">Log In</button>
+      </form>
         <p>FORGOT PASSWORD? RECOVERY HERE</p>
         <p>OR</p>
         <p>DON'T HAVE AN ACCOUNT? SIGN UP</p>
@@ -65,12 +67,14 @@
           <div class="loginbox2" id="signupbox2">
           <h3>SIGN UP</h3>
           <i class="fas fa-times" onclick="closeSignup()"></i>
+          <form>
           <input type="text" placeholder="USERNAME" name="uname" required>
           <input type="password" placeholder="PASSWORD" name="psw" required>
           <input type="password" placeholder="CONFIRM PASSWORD" name="psw" required>
           <input type="text" placeholder="FULLNAME" name="fname" required>
           <input type="text" placeholder="PHONE NUMBER" name="phone" required>
-          <button type="button" class="login-btn">Sign Up</button>
+          <button type="button" class="login-btn" name="signup">Sign Up</button>
+          </form>
           <p>OR</p>
           <p>ALREADY HAVE AN ACCOUNT? LOG IN</p>
           </div>
