--- a/creditcard.html
+++ b/creditcard.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>     
+      <head>
+                  <meta charset="UTF-8" />
+                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                  <title>Pick Ma Food</title>
+                  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+                  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+                  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+                  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+                  <link rel="stylesheet" href="css/creditcard.css">
+                  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css">
+                  <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,500,700&display=swap" rel="stylesheet">
+      </head>
 <body>
+      <div class="header">
+            <h2>PICK MA FOOD</h2>
+            <i class="fas fa-times"></i>
+      </div>
+      <div class="body-container">
       <form action="payment.php" method ="POST">
-            <h3>Payment</h3>
-            Accepted Cards<br>
-            Name on Card
-            <input type="varchar" id="name" name="name" required pattern="[a-zA-Z]+" placeholder="John More Doe" required >
-            <br>Credit card number
-            <input type="int" id="ccnum" name="cardNo" required pattern="[0-9]+"placeholder="1111222233334444" required>
-            <br>Exp Month
-            <input type="number" id="expmonth" size="2"  name="expMM" max="12" min="1" placeholder="01" required>
-            <br>Exp Year
-            <input type="number" id="expyear" size="4" name="expYYYY" max="2200" min="2000" placeholder="2018" required>
-            <br>CVV
-            <input type="int" id="cvv" name="cvv" equired pattern="[0-9]+" placeholder="352" required> <br>
-            <button>submit</button>
+            <h2>Payment</h2>
+            <h2>Accepted Cards</h2>
+            <h2>Name on Card <span><input type="varchar" id="name" name="name" required pattern="[a-zA-Z]+" placeholder="John More Doe" required ></span></h2>
+            <h2>Credit card number <span><input type="int" id="ccnum" name="cardNo" required pattern="[0-9]+"placeholder="1111222233334444" required></span></h2>
+            <h2>Exp Month <span><input type="number" id="expmonth" size="2"  name="expMM" max="12" min="1" placeholder="01" required></span></h2>
+            <h2>Exp Year <span><input type="number" id="expyear" size="4" name="expYYYY" max="2200" min="2000" placeholder="2018" required></span></h2>
+            <h2>CVV <span><input type="int" id="cvv" name="cvv" equired pattern="[0-9]+" placeholder="352" required></span></h2>
+            <button type="submit">submit</button>
             </form>
+      </div>
 </body>
 </html>
