update staffmenu and edit machine

--- a/deleted.html
+++ b/deleted.html
@@ -18,7 +18,8 @@
       </div>
       <div class="body-container">
           <h2>This machine has been deleted!</h2>
-          <button>BACK</button>
+          <a href="stafffind.php">
+          <button>BACK</button></a>
     </div>
     </body>
     </html>
