--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p><input type="checkbox" checked="checked" name="remember">Remember me</p>
         <button type="submit" class="login-btn" name="login">Log In</button>
       </form>
-        <p>FORGOT PASSWORD? RECOVERY HERE</p>
+        <a href="enterEmail.php"><p>FORGOT PASSWORD? RECOVERY HERE</p></a>
         <p>OR</p>
         <p>DON'T HAVE AN ACCOUNT? SIGN UP</p>
         </div>
